--- a/exercicios/ex022/fundo005.html
+++ b/exercicios/ex022/fundo005.html
@@ -13,6 +13,16 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+            /* background: black url('imagens/wallpaper002.jpg') center center / cover no-repeat fixed; */
+            
+            /*Shorthand - background
+            color > image > position > repeat > [size] > attachment 
+
+            color > image > position > / > [size] > repeat > attachment
+            */
+
         }
 
         main {
